--- a/index.html
+++ b/index.html
@@ -6,44 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="css/animation.css">
-    <link rel="stylesheet" href="css/style.css">
-    <!-- Script -->
-    <link rel="stylesheet" href="js/script.js" defer>
-    <title>Document</title>
+    <!-- Stylesheet
+    <link rel="stylesheet" href="css/animation.css"> -->
+    <link rel="stylesheet" href="css/style.css"> 
+    <!-- Fonts Google -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"> 
+    <!-- Script 
+    <link rel="stylesheet" href="js/script.js" defer> -->
+    <title>Happy Valentine's Day ♥</title>
 </head>
 <body>
-    <section class="main-content">
-        <div class="container">
-            <div class="text-container d-flex">
-                <p>HAPPY VALENTINE'S DAY ♥</p>
+    <section class="main-info">
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-6 col-md-6 col-xl-6 align-center">
+            <div class="text-container text-uppercase"> 
+              <h1 class="title">¡HAPPY VALENTINE'S DAY ♥!</h1>
             </div>
-            <div class="btn-content">
-                <p>
-                    <a class="btn btn-primary" data-toggle="collapse" href="#img-view" role="button" aria-expanded="false" aria-controls="collapseExample">
-                      ¡Mírame!
-                    </a>
-                    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                      ¡Léeme!
-                    </button>
-                  </p>
-                  <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
-                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
-                    </div>
-                  </div>
-                  <div class="collapse" id="img-view">
-                    <div class="card card-body">
-                        <img src="img/view-the-heaven.jpg">
-                    </div>
-                  </div>
+            <div class="btn-container col-6 col-md-6 col-xl-6">
+              <a href="#sect-target" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="false" aria-controls="sect-target">¡Mírame!</a>
+              <a href="#" class="btn btn-lg active" role="button" aria-pressed="true">¡Léeme!</a>
             </div>
+          </div>
         </div>
+      </div>
     </section>
-    <span class="" id="img-view">
-        
-    </span>
+    <section class="collapse" id="sect-target">
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="text-container col-6 col-md-6 col-xl-6">
+            <h2 class="title">View the Heaven</h2>
+          </div>
+          <div class="img-container col-6 col-md-6 col-xl-6">
+            <img class="img" src="img/view-the-heaven.jpg">
+          </div>
+        </div>
+      </div>
+    </section>
     <div class='heart'></div>
     <!-- JS only -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
