--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Stylesheet
     <link rel="stylesheet" href="css/animation.css"> -->
     <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/responsive.css">
     <!-- Fonts Google -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"> 
