--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"> 
     <!-- Script 
     <link rel="stylesheet" href="js/script.js" defer> -->
-    <title>Happy Valentine's Day ♥</title>
+    <title>Happy Day ♥</title>
 </head>
 <body>
     <section class="main-info">
@@ -23,7 +23,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-6 col-md-6 col-xl-6 align-center">
             <div class="text-container text-uppercase"> 
-              <h1 class="title">¡HAPPY VALENTINE'S DAY ♥!</h1>
+              <h1 class="title">¡HAPPY 24th ♥!</h1>
             </div>
             <div class="btn-container col-6 col-md-6 col-xl-6">
               <a href="#sect-target" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="false" aria-controls="sect-target">¡Mírame!</a>
@@ -36,7 +36,7 @@
     <section class="collapse" id="sect-target">
       <div class="container">
         <div class="row d-flex justify-content-center">
-          <div class="text-container col-6 col-md-6 col-xl-6">
+          <div class="text-container col-12 col-md-12 col-xl-12">
             <h2 class="title">View the Heaven</h2>
           </div>
           <div class="img-container col-6 col-md-6 col-xl-6">
