--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <section class="main-info">
       <div class="container">
         <div class="row d-flex justify-content-center">
-          <div class="col-6 col-md-6 col-xl-6 align-center">
-            <div class="text-container text-uppercase"> 
+          <div class="col-6 col-md-6 col-xl-6">
+            <div class="text-container bg-warning text-uppercase"> 
               <h1 class="title">¡HAPPY 24th ♥!</h1>
             </div>
-            <div class="btn-container col-6 col-md-6 col-xl-6">
+            <div class="btn-container bg-primary d-flex justify-content-center">
               <a href="#sect-target" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="false" aria-controls="sect-target">¡Mírame!</a>
               <a href="#" class="btn btn-lg active" role="button" aria-pressed="true">¡Léeme!</a>
             </div>
