--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="container">
         <div class="row d-flex justify-content-center">
           <div class="col-6 col-md-6 col-xl-6">
-            <div class="text-container bg-warning text-uppercase"> 
+            <div class="text-container text-uppercase"> 
               <h1 class="title">¡HAPPY 24th ♥!</h1>
             </div>
-            <div class="btn-container bg-primary d-flex justify-content-center">
+            <div class="btn-container d-flex justify-content-center">
               <a href="#sect-target" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="false" aria-controls="sect-target">¡Mírame!</a>
               <a href="#" class="btn btn-lg active" role="button" aria-pressed="true">¡Léeme!</a>
             </div>
@@ -39,7 +39,7 @@
           <div class="text-container col-12 col-md-12 col-xl-12">
             <h2 class="title">View the Heaven</h2>
           </div>
-          <div class="img-container col-6 col-md-6 col-xl-6">
+          <div class="img-container img-fluid col-6 col-md-6 col-xl-6">
             <img class="img" src="img/view-the-heaven.jpg">
           </div>
         </div>
