--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2 class="title">View the Heaven</h2>
           </div>
           <div class="img-container img-fluid col-6 col-md-6 col-xl-6">
-            <img class="img" src="img/view-the-heaven.jpg">
+            <img class="img-fluid" src="img/view-the-heaven.jpg">
           </div>
         </div>
       </div>
