--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="btn-container d-flex justify-content-center">
               <a href="#sect-target" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="false" aria-controls="sect-target">¡Mírame!</a>
-              <a href="#" class="btn btn-lg active" role="button" aria-pressed="true">¡Léeme!</a>
+              <a href="#sect-letter" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="false" aria-controls="sect-letter">¡Léeme!</a>
             </div>
           </div>
         </div>
@@ -39,8 +39,20 @@
           <div class="text-container col-12 col-md-12 col-xl-12">
             <h2 class="title">View the Heaven</h2>
           </div>
-          <div class="img-container img-fluid col-6 col-md-6 col-xl-6">
-            <img class="img-fluid" src="img/view-the-heaven.jpg">
+          <div class="img-container col-6 col-md-6 col-xl-6">
+            <img class="img-fluid img-thumbnail" src="img/view-the-heaven.jpg">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="collapse" id="sect-letter">
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="text-container col-12 col-md-12 col-xl-12">
+            <h2 class="title">Word Bridge</h2>
+          </div>
+          <div class="img-container col-6 col-md-6 col-xl-6">
+            <img src="img/word-bridge.gif" class="img-fluid img-thumbnail">
           </div>
         </div>
       </div>
