--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"> 
     <!-- Script 
     <link rel="stylesheet" href="js/script.js" defer> -->
-    <title>Happy Day ♥</title>
+    <title>I ♥ U</title>
 </head>
 <body>
     <section class="main-info">
@@ -23,7 +23,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-6 col-md-6 col-xl-6">
             <div class="text-container text-uppercase"> 
-              <h1 class="title">¡HAPPY 24th ♥!</h1>
+              <h1 class="title">¡Happy Whatever Day ♥!</h1>
             </div>
             <div class="btn-container d-flex justify-content-center">
               <a href="#sect-target" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="false" aria-controls="sect-target">¡Mírame!</a>
