--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               <h1 class="title">¡Happy Whatever Day ♥!</h1>
             </div>
             <div class="btn-container d-flex justify-content-center">
-              <a href="#sect-target" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="false" aria-controls="sect-target">¡Mírame!</a>
-              <a href="#sect-letter" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="false" aria-controls="sect-letter">¡Léeme!</a>
+              <a href="#sect-target" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="true" aria-controls="sect-target">¡Mírame!</a>
+              <a href="#sect-letter" data-toggle="collapse" class="btn btn-lg active" role="button" aria-expanded="true" aria-controls="sect-letter">¡Léeme!</a>
             </div>
           </div>
         </div>
